<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="date" type="id" />
    <item name="homeTeam" type="id" />
    <item name="homeScore" type="id" />
    <item name="vs" type="id" />
    <item name="awayScore" type="id" />
    <item name="awayTeam" type="id" />
    <item name="rv" type="id" />
</resources>