<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_add"
        android:icon="@drawable/ic_favorite_add"
        android:title="@string/favorite"
        android:iconifiedByDefault="false"
        app:showAsAction="ifRoom"/>

</menu>